Fix submenu alignment

--- a/engine-wizard/scss/_layout.scss
+++ b/engine-wizard/scss/_layout.scss
@@ -192,6 +192,7 @@ body {
                 top: auto !important;
                 bottom: 0 !important;
                 min-width: 200px;
+                margin-left: 3px;
 
                 .dropdown-item {
                     padding: 0.25rem 0.75rem;
